...
        valueState: String(localized: "Value State", bundle: .module),
        value: String(localized: "Value", bundle: .module),
        noValue: String(localized: "No Value", bundle: .module),
        notSet: String(localized: "Not Set", bundle: .module),
        noItems: String(localized: "No items added yet.", bundle: .module),
        addItemPrefix: String(localized: "Add", bundle: .module),
        remove: String(localized: "Remove", bundle: .module),
        minimumItemsPrefix: String(localized: "Minimum items:", bundle: .module),
        maximumItemsPrefix: String(localized: "Maximum items:", bundle: .module)
    )

    public var valueState: String
    public var value: String
...
